fixed bug with the task screen, how many people read these?

--- a/app/views/layouts/userdashboards.html.erb
+++ b/app/views/layouts/userdashboards.html.erb
@@ -14,7 +14,7 @@
   <ul>  
     <li><a href="#"><%= current_user.email %></a></li>
     <li><%= link_to "Home", root_url %></li>
-    <li><%= link_to "Add Task", newtask_url %></li>
+    <li><%= link_to "Add Task", newcase_url %></li>
   </ul>  
 
 </header-menu>
